	or what it actually did, is unclear. Now brush outlines don't have
	so many gaps any longer. (There are still some gaps for
	pathological brushes.)

2005-06-23  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-actions.c (plug_in_actions_last_changed): call
	plug_in_actions_update() to update the sensitivity of the last used
	plug-in entries.

2005-06-23  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpintcombobox.c (gimp_int_combo_box_new_valist)
	(gimp_int_combo_box_new_array): no need to create a new list store;
	gimp_int_combo_box_init() already did that for us.

2005-06-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/grid.c: draw the intersection on top of the grid.
	Fixes bug #308754.

2005-06-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/shift.c: shift whole rows/columns, instead of
	tiles. Fixes bug #308748.

2005-06-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c: removed redundant labels.

2005-06-23  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpbrowser.[ch]: added the widget living in the
	right_vbox to the GimpBrowser struct instead of attaching it to
	the browser.

2005-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c: applied a patch from
	Karine Delvare that removes an obsolete frame.

	* plug-ins/FractalExplorer/Makefile.am
	* plug-ins/FractalExplorer/logo.h: removed logo now that the About
	dialog is gone.
	
2005-06-22  Michael Natterer  <mitch@gimp.org>

	* libgimpconfig/gimpconfig-deserialize.h
	* libgimpconfig/gimpconfig-error.h
	* libgimpconfig/gimpconfig-iface.h
	* libgimpconfig/gimpconfig-params.h
	* libgimpconfig/gimpconfig-path.h
	* libgimpconfig/gimpconfig-serialize.h
	* libgimpconfig/gimpconfig-utils.h: added G_BEGIN_DECLS/G_END_DECLS.

2005-06-22  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added Edit->Preferences since that
	seems to be the standard location nowadays (bug #157613).
